Set size on retirement image to prevent any content jumping

--- a/css/main.css
+++ b/css/main.css
@@ -339,6 +339,8 @@ body {
 }
 
 .retireImage {
+    width: 900px;
+    height: 600px;
     border: 1px solid black;
     border-radius: 50%;
     margin-top: 10px;
